Fix figure box alignment
Corrected the justification and alignment of the figure boxes.

--- a/style.css
+++ b/style.css
@@ -83,11 +83,17 @@ img {
     padding-bottom: 80px;
 }
 
+.section.two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .box {
     display: flex;
     flex-direction: column;
-    background-color: #F9FAF8;
-    border: 5px solid #3882F6;
+    background-color: white;
+    border: 4px solid #3882F6;
     border-radius: 12px;
     height: 150px;
     width: 150px;
@@ -99,6 +105,15 @@ img {
     font-size: 36px;
     font-weight: 950;
     color: #1F2937;
+}
+
+.boxcap {
+    display: flex;
+    justify-content: center;
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    padding-bottom: 80px;
 }
 
 .three {
